Fix a typo in env/no-debug.conf

--- a/env/no-debug.conf
+++ b/env/no-debug.conf
@@ -1,3 +1,3 @@
 # QA: takes too much RAM/disk space if debug is enabled
 CFLAGS="${CFLAGS} -g0"
-CXXFLAGS="${CFLAGS} -g0"
+CXXFLAGS="${CXXFLAGS} -g0"
