--- a/package.env
+++ b/package.env
@@ -1,2 +1,2 @@
 # Really huge RAM and disk consumption while building
-net-libs/webkit-gtk	no-debug.conf
+net-libs/webkit-gtk	no-debug.conf i-know-what-i-am-doing.conf
